--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,17 @@
     "dev": "webpack serve",
     "build": "webpack",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -27,11 +32,15 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.97.1",
@@ -41,6 +50,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
