--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,7 @@ SECRET_KEY=1234qwerty
 JWT_ACCESS_SECRET=jwt-secret-key
 JWT_REFRESH_SECRET=jwt-refresh-secret-key
 CLIENT_URL=http://localhost:3002
+SMTP_HOST="smtp.yandex.ru"
+SMTP_PORT=587
+SMTP_USER=Dan999N@yandex.ru
+SMTP_PASSWORD=gkqsaflmivigdtsv
