--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "path-to-regexp": "^8.2.0",
     "pg": "^8.13.0",
     "sequelize": "^6.37.3",
